# law_rag

./: .gitignore  README.md  pyproject.toml
data/original/: preproccessor.py  schema.csv
src/: db_handler.py  rag.py
src/utils/: loader.py
test/: test_db_handler.py  test_loader.py
