[tool.poetry]
name = "law-rag"
version = "0.1.0"
description = ""
authors = ["tjjd4 <t01123581321345589@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-community = "^0.3.7"
jq = "^1.8.0"
langchain-chroma = "^0.1.4"
langchain-ollama = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
